tests/org.eclipse.php.core.tests/workspace/errors/php53/unfinishedClassDecl5.pdtt
--TEST--
Test unfinished class declaration error reporting
--FILE--
<?php
namespace ns1;

class B{};
class A extends B, {}
?>
--EXPECT--
[line=5, start=50, end=51] syntax error, unexpected ',', expecting '{'